--- a/index.html
+++ b/index.html
@@ -11,12 +11,12 @@
 	<body>
 		<header>
 			<div class="container">
-				<h1>Aparecida Nutrição</h1>
+				<h1 class="titulo">Aparecida Nutrição</h1>
 			</div>
 		</header>
 		<main>
 			<section class="container">
-				<h2>Meus Clientes</h2>
+				<h2 class="subtitulo">Meus Clientes</h2>
 				<table>
 					<thead>
 						<tr>
