--- a/index.html
+++ b/index.html
@@ -93,6 +93,7 @@
 				</form>
 			</section>
 		</main>
-		<script src="principal.js"> </script>
+		<script src="calculo-imc.js"> </script>
+		<script src="formulario.js"> </script>
 	</body>
 </html>
